--- a/css/new-styles.css
+++ b/css/new-styles.css
@@ -231,7 +231,7 @@ section.contact {
     grid-template-columns: 1fr 1fr 1fr; */
     /* background-color: red; */
     /* min-height: 500px; */
-    padding-bottom: 60px;
+    padding-bottom: 140px;
 }
 
 h2.contact{
@@ -239,20 +239,26 @@ h2.contact{
     padding-top: 60px!important;
 }
 
+/* input[type="input"], input[type="text"], input[type="password"], input[type="email"], textarea {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+} */
+
 
 input {
     width: 100%;
     margin-bottom: 20px;
     padding: 10px;
-    /* border: none; */
+    border: 2px solid #33363A;
     /* box-shadow: 0px 5px 10px rgb(146 146 146 / 13%); */
     border-radius: 2px;
-    color: #c5d2dc;
+    color: #f9f9fa!important;
     /* font-family: 'Montserrat', sans-serif; */
-    font-size: 13px;
+    font-size: 15px;
     background-color:transparent;
-    border-color: #33363A;
     font-family: 'Roboto', sans-serif;
+    /* box-shadow: 0px 0px 0px !important; */
 }
 
 textarea {
@@ -261,10 +267,10 @@ textarea {
     min-height: 82px;
     margin-bottom: 20px;
     padding: 10px;
+    border: 2px solid #33363A;
     /* box-shadow: 0px 5px 10px rgb(146 146 146 / 13%); */
     border-radius: 2px;
-    color: rgb(151, 151, 151);
-    /* font-family: 'Montserrat', sans-serif; */
+    color: rgb(255, 255, 255);
     font-size: 13px;
     background-color:transparent;
     border-color: #33363A;
@@ -292,7 +298,12 @@ button.press {
 
 label input:focus {
     outline: 0;
-    border-color: rgb(173, 13, 13)!important;
+    border-color: rgb(196, 196, 196)!important;
+  }
+
+  ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #fff;
+    opacity: 1; /* Firefox */
   }
 
 
