--- a/css/globe.css
+++ b/css/globe.css
@@ -1,5 +1,9 @@
 
 
+#desktop-globe {display: block;}
+#mobile-globe {display: none;}
+
+
   .red{
     background:transparent;
 }
@@ -225,4 +229,18 @@
     position: absolute;
     transform: translatey(0px);
 	animation: float 6s ease-in-out infinite;
+}
+
+@media only screen and (max-width: 750px) {
+
+#desktop-globe {display: none;}
+#mobile-globe {display: block;}
+
+.circle {
+  width: 350px;
+  height: 350px;
+  /* border-radius: 50%;
+  box-shadow: 0px 0px 1px 1px #0000001a; */
+}
+
 }
