--- a/css/new-styles.css
+++ b/css/new-styles.css
@@ -304,7 +304,7 @@ label input:focus {
 
 
 
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 910px) {
 
     .row-three{
         max-width: 944px;
@@ -326,7 +326,7 @@ label input:focus {
         max-width: 100%;
         height: 870px;
         /* background-image: url(https://res.cloudinary.com/mselbekk-com/image/upload/v1615409661/illustration-section-01_1_hijxfd.svg)!important; */
-        background-image: url(https://res.cloudinary.com/mselbekk-com/image/upload/v1615410190/illustration-section-01_1_3_ygz47r.svg)!important;
+        background-image: url(https://res.cloudinary.com/mselbekk-com/image/upload/v1615459234/Group_1_z65om3.svg)!important;
         background-repeat: no-repeat;
         background-size: auto;
         left: 50%;
@@ -334,6 +334,29 @@ label input:focus {
         background-position: center top;
         -webkit-transform: translate(-50%);
         transform: translate(-50%);
+    }
+
+h1 {
+
+    font-size: 35px;
+}
+
+p.subtitle {
+    font-size: 20px;
+}
+
+  }
+
+
+  @media only screen and (max-width: 550px) {
+
+    h1 {
+
+        font-size: 28px;
+    }
+    
+    p.subtitle {
+        font-size: 18px;
     }
 
   }
