--- a/css/globe.css
+++ b/css/globe.css
@@ -245,6 +245,13 @@
 
 }
 
+@media only screen and (max-width: 640px) {
+.center {
+  margin-top: 50px;
+}
+}
+
+
 @media only screen and (max-width: 550px) {
 
 
