--- a/css/new-styles.css
+++ b/css/new-styles.css
@@ -390,10 +390,10 @@ p.title {
     p.subtitle {
         font-size: 18px;
     }
-
+/* 
     h6, .h6, small, .text-sm {
         font-size: 9px;
-    }
+    } */
 
     .hero-content br {display: none;}
 
