--- a/css/new-styles.css
+++ b/css/new-styles.css
@@ -378,6 +378,11 @@ p.title {
     width: 50%;
 }
 
+h2.contact {
+    padding-top: 80px!important;
+    margin-bottom: 80px!important;
+}
+
 
   }
 
