--- a/css/new-styles.css
+++ b/css/new-styles.css
@@ -178,6 +178,10 @@ p.about {
 
 .row-three img {
     width: 150px;
+    /* -webkit-box-shadow: -5px 4px 10px -1px rgba(176,176,176,1);
+-moz-box-shadow: -5px 4px 10px -1px rgba(176,176,176,1);
+box-shadow: -5px 4px 10px -1px rgba(176,176,176,1); */
+    
 }
 
 
